--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <java.version>1.6</java.version>
-        <spring.version>3.2.8.RELEASE</spring.version>
+        <java.version>1.8</java.version>
+        <spring.version>4.1.6.RELEASE</spring.version>
         
         <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
         <jackson.version>2.2.3</jackson.version>
@@ -77,6 +77,9 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.12</version>
         </dependency>
+
+        <!-- Testing -->
+
 
     </dependencies>
 
